[package]
name = "poolparty"
version = "0.2.1"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
keywords = ["futures", "async", "future", "threadpool", "executor"]
repository = "https://github.com/xermicus/poolparty"
documentation = "https://docs.rs/poolparty/0.1.2"
description = """
Added functionality for the `futures::executor::ThreadPool` futures executor.
"""
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.5", package = "futures", features = ["thread-pool"] }
async-std = { version = "1.6.0", features = ["unstable"] }
