[package]
name = "poolparty"
version = "1.0.1"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
keywords = ["futures", "async", "future", "threadpool", "executor"]
repository = "https://github.com/xermicus/poolparty"
documentation = "https://docs.rs/poolparty/1.0.0"
description = """
Added functionality for the `futures::executor::ThreadPool` futures executor.
"""
categories = ["asynchronous"]

[dependencies]
futures = { version = "0.3.8", package = "futures", features = ["thread-pool"] }
async-std = { version = "1.7.0", features = ["unstable"] }
