[package]
name = "poolparty"
version = "2.0.1"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
keywords = ["futures", "async", "future", "threadpool", "executor"]
repository = "https://github.com/xermicus/poolparty"
documentation = "https://docs.rs/poolparty/2.0.1"
description = """
Added functionality for the `futures::executor::ThreadPool` futures executor.
"""
categories = ["asynchronous"]

[dependencies]
futures = { version = "0.3.17", package = "futures", features = ["thread-pool"] }
async-std = { version = "1.10.0", features = ["unstable"] }
